# Semana-9/mvc-api-books/app/controllers/book_controller.py
@@ -3,30 +3,22 @@ from models.book_model import Book
 from views.book_view import render_book_detail, render_book_list
 from flask_jwt_extended import verify_jwt_in_request, get_jwt_identity
 from functools import wraps
-
+from utils.decorators import jwt_required, roles_required
 # Crear un blueprint para el controlador de animales
 book_bp = Blueprint("book",__name__)
-
-def jwt_required(fn):
-    @wraps(fn)
-    def wrapper(*args, **kwargs):
-        try:
-            verify_jwt_in_request()
-            return fn(*args, **kwargs)
-        except Exception as e:
-            return jsonify({"error": str(e)}), 401
-
-    return wrapper
 
 # Ruta para obtener la lista de animales
 @book_bp.route("/books", methods=["GET"])
 @jwt_required
+@roles_required(roles=["admin","user"])
 def get_books():
     books=Book.get_all()
     return jsonify(render_book_list(books))
 
 @book_bp.route("/books/<int:id>", methods=["GET"])
 @jwt_required
+@roles_required(roles=["admin","user"])
+
 def get_book(id):
     book = Book.get_by_id(id)
     if book:
@@ -36,6 +28,7 @@ def get_book(id):
 
 @book_bp.route("/books", methods=["POST"])
 @jwt_required
+@roles_required(roles=["admin"])
 def create_book():
     data=request.json
     title= data.get("title")
@@ -52,6 +45,7 @@ def create_book():
     
 @book_bp.route("/books/<int:id>", methods=["PUT"])
 @jwt_required
+@roles_required(roles=["admin"])
 def update_book(id):
     book = Book.get_by_id(id)
     if not book:
@@ -68,6 +62,7 @@ def update_book(id):
 
 @book_bp.route("/books/<int:id>", methods=["DELETE"])
 @jwt_required
+@roles_required(roles=["admin"])
 def delete_book(id):
     book = Book.get_by_id(id)
     if not book:
