# Semana-9/mvc-api-books/app/models/user_model.py
@@ -1,7 +1,7 @@
 from database import db
 from werkzeug.security import generate_password_hash, check_password_hash
 from flask_login import UserMixin
-
+import json
 
 class User(UserMixin, db.Model):
     __tablename__ = "users"
@@ -9,9 +9,11 @@ class User(UserMixin, db.Model):
     id = db.Column(db.Integer, primary_key=True)
     username = db.Column(db.String(50), unique=True, nullable=False)
     password_hash = db.Column(db.String(128), nullable=False)
+    roles=db.Column(db.String(50), nullable=False)
 
-    def __init__(self, username, password):
+    def __init__(self, username, password, roles=["user"]):
         self.username = username
+        self.roles = json.dumps(roles)
         self.password_hash = generate_password_hash(password)
 
     def save(self):
@@ -22,3 +24,4 @@ class User(UserMixin, db.Model):
     @staticmethod
     def find_by_username(username):
         return User.query.filter_by(username=username).first()
+    
