# Semana-9/mvc-api-books/app/static/swagger.json
@@ -264,11 +264,22 @@
                     },
                     "password": {
                         "type": "string"
+                    },
+                    "roles":{
+                        "type":"array",
+                        "items":{
+                            "type":"string",
+                            "enum":[
+                                "admin",
+                                "user"
+                            ]
+                        }
                     }
                 },
                 "required": [
                     "username",
-                    "password"
+                    "password",
+                    "role"
                 ]
             },
             "Login": {
